--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -51,4 +51,14 @@ release:
 # If you want to manually examine the release before its live, uncomment this line:
 # draft: true
 changelog:
-  skip: true
+  skip: false
+  sort: asc
+
+  filters:
+
+    # Commit messages matching the regexp listed here will be removed from
+    # the changelog
+    # Default is empty
+    exclude:
+      - '^chore:'
+      - typo
